<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/subtle_blue"
    tools:context=".ui.privatenotes.EditNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:padding="16dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic"
                tools:text="@string/new_note" />

            <TextView
                android:id="@+id/tv_created"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:padding="16dp"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic"
                tools:text="Created 03.02.1991" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:cardCornerRadius="6dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_note_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:hint="@string/note_text"
                android:textColorHint="?android:textColorHint"
                app:layout_constraintBottom_toBottomOf="@+id/spFromCurrency"
                app:layout_constraintEnd_toStartOf="@+id/spFromCurrency"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/spFromCurrency">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_note_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textMultiLine|textCapSentences"
                    android:maxLines="3"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="italic" />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <CheckBox
            android:id="@+id/cb_high_prioroty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="120dp"
            android:buttonTint="#FFFFFF"
            android:foregroundTint="#FFFFFF"
            android:paddingHorizontal="30dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:thumbTint="@color/purple_500"
            android:text="@string/high_priority" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="32dp"
        android:src="@drawable/ic_check"
        app:backgroundTint="@color/purple_500"
        app:borderWidth="0dp"
        app:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>